tests/fixtures/errors/invalid_preproc_unexpected_endfunction.puml
@startuml
!endfunction
Alice -> Bob: unexpected terminator
@enduml
